--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>password generator</title>
 </head>
 <body>
-  
+
+  <h1>GENERATORE DI PASSWORD</h1>
+
+  <div class="container">
+
+    <div class="box">
+
+      <div class="title">
+        <h3>
+          Ecco La Tua Password
+        </h3>
+      </div>
+
+      <div class="password">
+        <span id="yourpassword"></span>
+      </div>
+
+    </div>
+    
+  </div>
 
   <script src="js/script.js"></script>
 </body>
